--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -1,4 +1,4 @@
-#example.property: "I AM NOT THE DEFAULT"
+example.property: "I AM NOT THE DEFAULT"
 spring.jpa.database: "MYSQL"
 spring.datasource.platform:  "mysql"
 spring.jpa.show-sql: "true"
